force-app/main/default/objects/AdviceType__c/AdviceType__c.object-meta.xml
<CustomObject>
    <description>Models the types of advice that we provide to customers and how things vary between them. Used to drive business logic on actual advice.</description>
    <label>Advice Type</label>
    <nameField>
        <label>Advice Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advice Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>