force-app/main/default/objects/AdviceType__c/fields/AdviceChecklistRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>AdviceChecklistRecordTypeDeveloperName__c</fullName>
    <label>Checklist Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>