force-app/main/default/objects/AdviceType__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the advice type that will be shown to colleagues.</description>
    <inlineHelpText>Shown to colleagues throughout the process of setting up advice.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>