force-app/main/default/objects/AdviceType__c/fields/InformationRequests__c.field-meta.xml
<CustomField>
    <fullName>InformationRequests__c</fullName>
    <description>Captures whether the advice type has information requests.</description>
    <label>Information requests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdviceTypeRequirements</valueSetName>
    </valueSet>
</CustomField>