force-app/main/default/objects/AdviceType__c/fields/IsAnnualReview__c.field-meta.xml
<CustomField>
    <fullName>IsAnnualReview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, this advice type specifically covers annual reviews.</inlineHelpText>
    <label>Annual review?</label>
    <type>Checkbox</type>
</CustomField>