force-app/main/default/objects/AdviceType__c/fields/IsOnboarding__c.field-meta.xml
<CustomField>
    <fullName>IsOnboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, this is onboarding advice and can only be chosen where the advice is for a new customer.</inlineHelpText>
    <label>Onboarding</label>
    <type>Checkbox</type>
</CustomField>