force-app/main/default/objects/AdviceType__c/fields/ProfileUpdate__c.field-meta.xml
<CustomField>
    <fullName>ProfileUpdate__c</fullName>
    <description>Captures whether the advice type has profile updates.</description>
    <label>Profile update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdviceTypeRequirements</valueSetName>
    </valueSet>
</CustomField>