force-app/main/default/objects/AdviceType__c/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <description>The developer name of the record type that will be used for advice of this type.</description>
    <label>Record Type Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>