force-app/main/default/objects/AdviceType__c/fields/RiskToleranceQuestionnaireSent__c.field-meta.xml
<CustomField>
    <fullName>RiskToleranceQuestionnaireSent__c</fullName>
    <description>Specifies whether an RTQ can happen as part of this advice type.</description>
    <label>RTQ Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AdviceTypeRequirements</valueSetName>
    </valueSet>
</CustomField>