force-app/main/default/objects/AdviceType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>DeveloperName__c</columns>
    <columns>RecordTypeDeveloperName__c</columns>
    <columns>Active__c</columns>
    <columns>SortOrder__c</columns>
    <columns>ClientType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>